fix: replace deprecated Locale(String), URL(String), Date.getDay() and toDateMidnight() APIs